Implement get_lifecycle_execution api
